<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="191"
        android:layout_width="0dp"
        android:layout_height="match_parent">
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="618"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/user_register"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/username"
                android:textAlignment="center"
                android:layout_weight="382"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/username"
                android:layout_weight="618"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/password"
                android:textAlignment="center"
                android:layout_weight="382"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_weight="618"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/repassword"
                android:textAlignment="center"
                android:layout_weight="382"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/repassword"
                android:inputType="textPassword"
                android:layout_weight="618"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:layout_weight="382"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/email"
                android:layout_weight="618"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/gender"
                android:textAlignment="center"
                android:layout_weight="382"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/gender"
                android:orientation="horizontal"
                android:layout_weight="618"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/male"
                    android:text="@string/male"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/female"
                    android:text="@string/female"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/phone"
                android:textAlignment="center"
                android:layout_weight="382"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/phone"
                android:inputType="phone"
                android:layout_weight="618"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight="191"
        android:layout_width="0dp"
        android:layout_height="match_parent">
    </LinearLayout>
</LinearLayout>